# embedded_wasm

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build_and_test.yml  fmt_and_clippy.yml
embedded_wasm/: Cargo.toml
embedded_wasm/derive/: Cargo.toml
embedded_wasm/derive/src/: lib.rs
embedded_wasm/src/: ffi.rs  lib.rs  process.rs  reader.rs  utils.rs  wasm.rs
embedded_wasm/src/instruction/: execute.rs  mod.rs  parse.rs  types.rs
embedded_wasm/src/instruction/parse/: base_instruction_map.rs  mod.rs  vector_instruction_map.rs
embedded_wasm/src/section/: code.rs  data.rs  export.rs  function.rs  global.rs  import.rs  instruction.rs  memory.rs  mod.rs  table.rs  type.rs
projects/async_example/: Cargo.toml
projects/async_example/src/: lib.rs
projects/blink/: Cargo.toml  cargo-toolchain.toml
projects/blink/src/: lib.rs
projects/empty/: Cargo.toml
projects/empty/src/: lib.rs
projects/shared/: Cargo.toml
projects/shared/src/: lib.rs
projects/sys/: Cargo.toml
projects/sys/src/: allocator.rs  future.rs  lib.rs
runner/desktop/: Cargo.toml
runner/desktop/src/: main.rs
runner/rp2040/: Cargo.toml  Embed.toml  flash.ps1  flash.sh  rust-toolchain.toml
runner/rp2040/.cargo/: config
runner/rp2040/src/: main.rs
src/: lib.rs  main.rs  reader.rs  utils.rs
src/section/: code.rs  data.rs  export.rs  function.rs  global.rs  import.rs  instruction.rs  memory.rs  mod.rs  table.rs  type.rs
sys/: Cargo.toml
sys/src/: lib.rs
util/linked_list_allocator/: Cargo.toml
util/linked_list_allocator/src/: lib.rs
utils/linked_list_allocator/tests/: basic.rs
