[package]
name = "async_example"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sys = { path = "../sys" }

[dependencies.hashbrown]
version = "0.12.0"
default-features = false
features = ["ahash"]

[dependencies.futures-util]
version = "0.3.21"
default-features = false

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
lto = true
opt-level = 's'
panic = "abort"

