[package]
name = "shared"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dep_num_derive = { version = "0.3.3", default-features = false, optional = true, package = "num-derive" }
num_traits = { version = "0.2.14", default-features = false, optional = true, package = "num-traits" }

[features]
num_derive = ["dep_num_derive", "num_traits"]
