[package]
name = "sys"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-time = "0.12"
shared = { path = "../shared" }

[dependencies.hashbrown]
version = "0.12"
default-features = false
