[package]
name = "desktop_runner"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-rc.7", features = ["derive"] }
embedded_wasm = { path = "../../embedded_wasm" }
shared = { path = "../../projects/shared", features = ["num_derive"] }
num-traits = "0.2"
